Add basic setup for gigs

--- a/app/index.html
+++ b/app/index.html
@@ -105,21 +105,92 @@
     </div>
 </div>
 
-<div class="container-fluid divider">
+<div class="container-fluid divider divider-gigs">
     Divider
 </div>
 
 <div class="container gigs">
 
-    <div class="row">
-        <div class="col-xs-12">
-            <img src="/images/gigs.png" alt="Demo Image">
+    <div class="row gigs-entry">
+        <div class="col-xs-1 col-sm-2 col-md-1 line-highlight">
+            <div class="line-normal">Noch</div>
+            <div class="line-big">19</div>
+            <div class="line-normal">Tage</div>
+        </div>
+        <div class="col-xs-11 col-sm-10 col-md-11 line-black">
+            <div class="line-normal line-info">
+                <span class="line-info-left">21.12.2017 | 20:00 Uhr</span>
+                <span class="line-info-right">mit Shack Out / Line Out / Fade Out / Plug Out</span>
+            </div>
+            <div class="line-big">Uff die Frestival</div>
+            <div class="line-normal">Zack Zack | Kaiserslautern</div>
+        </div>
+    </div>
+
+    <div class="row gigs-entry">
+        <div class="col-xs-1 col-sm-2 col-md-1 line-highlight">
+            <div class="line-normal">Noch</div>
+            <div class="line-big">1</div>
+            <div class="line-normal">Tag</div>
+        </div>
+        <div class="col-xs-11 col-sm-10 col-md-11 line-black">
+            <div class="line-normal line-info">
+                <span class="line-info-left">21.12.2017 | 20:00 Uhr</span>
+                <span class="line-info-right">mit Shack Out / Line Out / Fade Out / Plug Out</span>
+            </div>
+            <div class="line-big">Uff die Frestival</div>
+            <div class="line-normal">Zack Zack | Kaiserslautern</div>
+        </div>
+    </div>
+
+    <div class="row gigs-entry">
+        <div class="col-xs-1 col-sm-2 col-md-1 line-highlight">
+            <div class="line-image">
+                <img src="images/ShackbirdBird.png" alt="Shackbird - Bird Logo">
+            </div>
+            <div class="line-normal">Heute</div>
+        </div>
+        <div class="col-xs-11 col-sm-10 col-md-11 line-black">
+            <div class="line-normal line-info">
+                <span class="line-info-left">21.12.2017 | 20:00 Uhr</span>
+                <span class="line-info-right">mit Shack Out / Line Out / Fade Out / Plug Out</span>
+            </div>
+            <div class="line-big">Uff die Frestival</div>
+            <div class="line-normal">Zack Zack | Kaiserslautern</div>
+        </div>
+    </div>
+
+    <div class="row gigs-entry">
+        <div class="col-xs-1 col-sm-2 col-md-1 line-highlight">
+            <div class="line-normal">Vor</div>
+            <div class="line-big">123</div>
+            <div class="line-normal">Tagen</div>
+        </div>
+        <div class="col-xs-11 col-sm-10 col-md-11 line-black">
+            <div class="line-normal line-info">
+                <span class="line-info-left">21.12.2017 | 20:00 Uhr</span>
+                <span class="line-info-right">mit Shack Out / Line Out / Fade Out / Plug Out</span>
+            </div>
+            <div class="line-big">Uff die Frestival</div>
+            <div class="line-normal">Zack Zack | Kaiserslautern</div>
         </div>
     </div>
 
 </div>
 
-<div class="container-fluid divider">
+<div class="container-fluid divider divider-band">
+    Divider
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            Band
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid divider divider-gigs">
     Divider
 </div>
 
