Add parallax scrolling effect

--- a/app/index.html
+++ b/app/index.html
@@ -105,9 +105,7 @@
     </div>
 </div>
 
-<div class="container-fluid divider divider-gigs">
-    Divider
-</div>
+<div class="container-fluid divider divider-gigs paraxify"></div>
 
 <div class="container gigs">
 
@@ -178,9 +176,7 @@
 
 </div>
 
-<div class="container-fluid divider divider-band">
-    Divider
-</div>
+<div class="container-fluid divider divider-band paraxify"></div>
 
 <div class="container">
     <div class="row">
@@ -190,9 +186,7 @@
     </div>
 </div>
 
-<div class="container-fluid divider divider-gigs">
-    Divider
-</div>
+<div class="container-fluid divider divider-music paraxify"></div>
 
 <div class="container">
     <div class="row">
@@ -204,6 +198,8 @@
         </div>
     </div>
 </div>
+
+<div class="container-fluid divider divider-end paraxify"></div>
 
 </body>
 </html>
