Fix some parallax bugs

--- a/app/index.html
+++ b/app/index.html
@@ -105,7 +105,7 @@
     </div>
 </div>
 
-<div class="container-fluid divider divider-gigs paraxify"></div>
+<div class="paraxify container-fluid divider divider-gigs"></div>
 
 <div class="container gigs">
 
@@ -176,7 +176,7 @@
 
 </div>
 
-<div class="container-fluid divider divider-band paraxify"></div>
+<div class="paraxify container-fluid divider divider-band"></div>
 
 <div class="container">
     <div class="row">
@@ -186,7 +186,7 @@
     </div>
 </div>
 
-<div class="container-fluid divider divider-music paraxify"></div>
+<div class="paraxify container-fluid divider divider-music"></div>
 
 <div class="container">
     <div class="row">
@@ -199,7 +199,12 @@
     </div>
 </div>
 
-<div class="container-fluid divider divider-end paraxify"></div>
+<div class="paraxify container-fluid divider divider-end"></div>
+
+
+<script>
+    var parallax = paraxify('.paraxify');
+</script>
 
 </body>
 </html>
