Update some parallax styles

--- a/app/index.html
+++ b/app/index.html
@@ -201,5 +201,14 @@
 
 <div class="paraxify container-fluid divider divider-end"></div>
 
+
+<script src="scripts/app.js"></script>
+<script>
+    var myParaxify = paraxify('paraxify', {
+        speed: 0.5,
+        boost: 0.5
+    });
+</script>
+
 </body>
 </html>
