--- a/app/index.html
+++ b/app/index.html
@@ -109,7 +109,7 @@
 
 <div class="container gigs" id="gigs">
 
-    <div class="row gigs-entry">
+    <div class="row gigs-entry" data-date="7/30/2017">
         <div class="col-xs-3 col-sm-2 col-md-1 line-highlight">
             <div class="line-normal">Noch</div>
             <div class="line-big">19</div>
@@ -117,7 +117,7 @@
         </div>
         <div class="col-xs-9 col-sm-10 col-md-11 line-black">
             <div class="line-normal line-info">
-                <div class="text-left-sm">21.12.2017 | 20:00 Uhr</div>
+                <div class="text-left-sm">30.07.2017 | 20:00 Uhr</div>
                 <div class="text-right-sm">mit Shack Out / Line Out / Fade Out / Plug Out</div>
             </div>
             <div class="line-big">Uff die Frestival</div>
@@ -125,7 +125,7 @@
         </div>
     </div>
 
-    <div class="row gigs-entry">
+    <div class="row gigs-entry" data-date="7/14/2017">
         <div class="col-xs-3 col-sm-2 col-md-1 line-highlight">
             <div class="line-normal">Noch</div>
             <div class="line-big">1</div>
@@ -133,7 +133,7 @@
         </div>
         <div class="col-xs-9 col-sm-10 col-md-11 line-black">
             <div class="line-normal line-info">
-                <div class="text-left-sm">21.12.2017 | 20:00 Uhr</div>
+                <div class="text-left-sm">14.07.2017 | 20:00 Uhr</div>
                 <div class="text-right-sm">mit Shack Out / Line Out / Fade Out / Plug Out</div>
             </div>
             <div class="line-big">Uff die Frestival</div>
@@ -141,7 +141,7 @@
         </div>
     </div>
 
-    <div class="row gigs-entry">
+    <div class="row gigs-entry" data-date="7/13/2017">
         <div class="col-xs-3 col-sm-2 col-md-1 line-highlight">
             <div class="line-image">
                 <img src="images/ShackbirdBird.png" alt="Shackbird - Bird Logo">
@@ -150,7 +150,7 @@
         </div>
         <div class="col-xs-9 col-sm-10 col-md-11 line-black">
             <div class="line-normal line-info">
-                <div class="text-left-sm">21.12.2017 | 20:00 Uhr</div>
+                <div class="text-left-sm">13.07.2017 | 20:00 Uhr</div>
                 <div class="text-right-sm">mit Shack Out / Line Out / Fade Out / Plug Out</div>
             </div>
             <div class="line-big">Uff die Frestival</div>
@@ -158,7 +158,7 @@
         </div>
     </div>
 
-    <div class="row gigs-entry">
+    <div class="row gigs-entry" data-date="5/13/2017">
         <div class="col-xs-3 col-sm-2 col-md-1 line-highlight">
             <div class="line-normal">Vor</div>
             <div class="line-big">123</div>
@@ -166,7 +166,7 @@
         </div>
         <div class="col-xs-9 col-sm-10 col-md-11 line-black">
             <div class="line-normal line-info">
-                <div class="text-left-sm">21.12.2017 | 20:00 Uhr</div>
+                <div class="text-left-sm">13.05.2017 | 20:00 Uhr</div>
                 <siv class="text-right-sm">mit Shack Out / Line Out / Fade Out / Plug Out</siv>
             </div>
             <div class="line-big">Uff die Frestival</div>
