--- a/app/index.html
+++ b/app/index.html
@@ -83,6 +83,9 @@
                             quibusdam saepe, unde. Accusantium at, aut hic ipsam minus nam nostrum quis repellat ut
                             voluptatibus?
                         </div>
+                        <div>
+                            <iframe src="https://player.vimeo.com/video/225456786?color=ffffff&title=0&byline=0&portrait=0" frameborder="0" style="width: 100%" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                        </div>
                     </div>
                 </div>
 
@@ -109,68 +112,29 @@
 
 <div class="container gigs" id="gigs">
 
-    <div class="row gigs-entry" data-date="7/30/2017">
-        <div class="col-xs-3 col-sm-2 col-md-1 line-highlight">
-            <div class="line-normal">Noch</div>
-            <div class="line-big">19</div>
-            <div class="line-normal">Tage</div>
-        </div>
+    <div class="row gigs-entry" data-date="8/18/2017">
+        <div class="col-xs-3 col-sm-2 col-md-1 line-highlight"></div>
         <div class="col-xs-9 col-sm-10 col-md-11 line-black">
             <div class="line-normal line-info">
-                <div class="text-left-sm">30.07.2017 | 20:00 Uhr</div>
-                <div class="text-right-sm">mit Shack Out / Line Out / Fade Out / Plug Out</div>
+                <div class="text-left-sm">18.08.2017 | 20:00 Uhr</div>
+                <div class="text-right-sm">mit Captain Risiko, Whisky Diet</div>
             </div>
-            <div class="line-big">Uff die Frestival</div>
-            <div class="line-normal">Zack Zack | Kaiserslautern</div>
+            <div class="line-big visible-xs visible-sm">DLBAKKZEZ</div>
+            <div class="line-big hidden-xs hidden-sm">Die letzte Band aus Kusel kehrt zu euch zurück!</div>
+            <div class="line-normal">Livebühne | Goddelhausen | Eintritt: 5&euro;</div>
         </div>
     </div>
 
-    <div class="row gigs-entry" data-date="7/14/2017">
-        <div class="col-xs-3 col-sm-2 col-md-1 line-highlight">
-            <div class="line-normal">Noch</div>
-            <div class="line-big">1</div>
-            <div class="line-normal">Tag</div>
-        </div>
+    <div class="row gigs-entry" data-date="9/01/2017">
+        <div class="col-xs-3 col-sm-2 col-md-1 line-highlight"></div>
         <div class="col-xs-9 col-sm-10 col-md-11 line-black">
             <div class="line-normal line-info">
-                <div class="text-left-sm">14.07.2017 | 20:00 Uhr</div>
-                <div class="text-right-sm">mit Shack Out / Line Out / Fade Out / Plug Out</div>
+                <div class="text-left-sm">01.09.2017 | 22:00 Uhr</div>
+                <div class="text-right-sm">mit Special Guest</div>
             </div>
-            <div class="line-big">Uff die Frestival</div>
-            <div class="line-normal">Zack Zack | Kaiserslautern</div>
-        </div>
-    </div>
-
-    <div class="row gigs-entry" data-date="7/13/2017">
-        <div class="col-xs-3 col-sm-2 col-md-1 line-highlight">
-            <div class="line-image">
-                <img src="images/ShackbirdBird.png" alt="Shackbird - Bird Logo">
-            </div>
-            <div class="line-normal">Heute</div>
-        </div>
-        <div class="col-xs-9 col-sm-10 col-md-11 line-black">
-            <div class="line-normal line-info">
-                <div class="text-left-sm">13.07.2017 | 20:00 Uhr</div>
-                <div class="text-right-sm">mit Shack Out / Line Out / Fade Out / Plug Out</div>
-            </div>
-            <div class="line-big">Uff die Frestival</div>
-            <div class="line-normal">Zack Zack | Kaiserslautern</div>
-        </div>
-    </div>
-
-    <div class="row gigs-entry" data-date="5/13/2017">
-        <div class="col-xs-3 col-sm-2 col-md-1 line-highlight">
-            <div class="line-normal">Vor</div>
-            <div class="line-big">123</div>
-            <div class="line-normal">Tagen</div>
-        </div>
-        <div class="col-xs-9 col-sm-10 col-md-11 line-black">
-            <div class="line-normal line-info">
-                <div class="text-left-sm">13.05.2017 | 20:00 Uhr</div>
-                <siv class="text-right-sm">mit Shack Out / Line Out / Fade Out / Plug Out</siv>
-            </div>
-            <div class="line-big">Uff die Frestival</div>
-            <div class="line-normal">Zack Zack | Kaiserslautern</div>
+            <div class="line-big visible-xs visible-sm">DLBAKKINZEZ</div>
+            <div class="line-big hidden-xs hidden-sm">Die letzte Band aus Kusel kehrt immer noch zu euch zurück!</div>
+            <div class="line-normal">Schalander | Kusel</div>
         </div>
     </div>
 
@@ -191,10 +155,10 @@
 <div class="container music" id="music">
     <div class="row">
         <div class="col-md-6 text-center">
-            <iframe src="https://open.spotify.com/embed/album/797KE4IrCeXvH6ignBKsDw" height="715" frameborder="0" allowtransparency="true"></iframe>
+            <iframe src="https://open.spotify.com/embed/album/797KE4IrCeXvH6ignBKsDw" height="715" frameborder="0" allowtransparency="true" style="width: 100%"></iframe>
         </div>
         <div class="col-md-6 text-center">
-            <iframe src="https://open.spotify.com/embed/album/0AHmYWwYbJo1TdBXF7Xkga" height="715" frameborder="0" allowtransparency="true"></iframe>
+            <iframe src="https://open.spotify.com/embed/album/797KE4IrCeXvH6ignBKsDw" height="715" frameborder="0" allowtransparency="true" style="width: 100%"></iframe>
         </div>
     </div>
 </div>
