--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <!-- Meta  -->
     <meta charset="UTF-8">
     <meta name="description" content="Shackbird | Die letzte Band aus Kusel | Melodramatischer Garagenrock">
-    <meta name="author" content="Mischa Helfenstein">
+    <meta name="author" content="Shackbird">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <meta name="theme-color" content="#BBBBBB">
 
@@ -41,7 +41,7 @@
         <div class="col-xs-12 col-md-4">
             <div class="news-article">
                 <div class="row">
-                    <div class="col-xs-12 text-right">
+                    <div class="col-xs-12 float-right">
                         22.12.2017
                     </div>
                 </div>
@@ -116,8 +116,8 @@
         <div class="col-xs-3 col-sm-2 col-md-1 line-highlight"></div>
         <div class="col-xs-9 col-sm-10 col-md-11 line-black">
             <div class="line-normal line-info">
-                <div class="text-left-sm">18.08.2017 | 20:00 Uhr</div>
-                <div class="text-right-sm">mit Captain Risiko, Whisky Diet</div>
+                <div class="float-left-sm">18.08.2017 | 20:00 Uhr</div>
+                <div class="float-right-sm">mit Captain Risiko, Whisky Diet</div>
             </div>
             <div class="line-big visible-xs visible-sm">DLBAKKZEZ</div>
             <div class="line-big hidden-xs hidden-sm">Die letzte Band aus Kusel kehrt zu euch zurück!</div>
@@ -129,8 +129,8 @@
         <div class="col-xs-3 col-sm-2 col-md-1 line-highlight"></div>
         <div class="col-xs-9 col-sm-10 col-md-11 line-black">
             <div class="line-normal line-info">
-                <div class="text-left-sm">01.09.2017 | 22:00 Uhr</div>
-                <div class="text-right-sm">mit Special Guest</div>
+                <div class="float-left-sm">01.09.2017 | 22:00 Uhr</div>
+                <div class="float-right-sm">mit Special Guest</div>
             </div>
             <div class="line-big visible-xs visible-sm">DLBAKKINZEZ</div>
             <div class="line-big hidden-xs hidden-sm">Die letzte Band aus Kusel kehrt immer noch zu euch zurück!</div>
@@ -143,10 +143,56 @@
 <div class="paraxify container-fluid divider divider-band"></div>
 
 <div class="container band" id="band">
+    <div class="row cite text-center">
+        <div class="col-xs-12">
+            “Eine Welt, die immer schläft,<br/>
+            eine Welt, in der man lebt,<br/>
+            um den ganzen Tag zu hoffen,<br/>
+            dass sich nie etwas bewegt.”<br/>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-xs-12">
-            Band
+            <p>
+                Aus genau so einer Welt kommen die 3 jungen Männer/innen, die sich an einem regnerisch-grauen Spätsommertag anno
+
+                MMX gefunden haben, um zusammen als Shackbird Musik zu machen. Die nicht de facto aber selbsternannte letzte Band aus dem
+
+                verschlafenen Provinznest Kusel tut seither ihr Bestes, um der historischen Belastung des umgebenden Musikantenlandes gerecht zu werden
+
+                und diesen Status zukunftsorientiert auszubauen. So gelang es der Kapelle, ihre Musik auch bis über die
+
+                Grenzen des Pfälzer Hinterlandes hinauszutragen und beglückte die Menschen mit ihrem
+
+                Melodramatischen Garagenrock aus eigener Feder auch in den benachbarten Bundesländern.
+            </p>
+
+            <p>
+                Die Kompositionen bestechen hierbei durch eine präzise Melodik und können durchaus als schnelle Gitarrenmusik bezeichnet werden. Nebst
+
+                dieser treten Bass und Trommeln jedoch nicht in den Hintergrund, sondern nehmen ihren Platz gewissenhaft ein, um als kraftvolle
+
+                instrumentale Grundlage für die Stimmen der Musiker zu dienen.
+            </p>
+
+            <p>
+                So vielfältig wie schon die akustischen Landschaften des Trios gestalten sich die lyrischen der Texte. Sie behandeln eine immense
+
+                Bandbreite verschiedenster Themen und adressieren neben den klassichen Personalpronomen auch ganze Institutionen oder gar die
+
+                gesamte Gesellschaft, mit dem Ziel das Leben der gesamten Menschheit zu verbessern und das Schicksal der Zivilisation zu lenken.
+            </p>
+
+            <p>
+                Bis die Jungs aus der Hutmacherstadt dieses Ziel jedoch erreichen, ist es noch ein weiter Weg, den es zu bestreiten gilt. Am Ende werden mit
+
+                Sicherheit viele Konzerte gespielt, Menschenherzen berührt und Hoffnung gespendet worden sein. Darüber hinaus sind sie übrigens auch noch
+
+                sehr sympathisch und gutaussehend, leben gesund und lieben ihre Familien!
+            </p>
         </div>
+
     </div>
 </div>
 
