--- a/app/index.html
+++ b/app/index.html
@@ -108,9 +108,9 @@
     </div>
 </div>
 
-<div class="paraxify container-fluid divider divider-gigs"></div>
+<div class="paraxify container-fluid divider divider-gigs" id="gigs"></div>
 
-<div class="container gigs" id="gigs">
+<div class="container gigs">
 
     <div class="row gigs-entry" data-date="8/18/2017">
         <div class="col-xs-3 col-sm-2 col-md-1 line-highlight"></div>
@@ -140,9 +140,9 @@
 
 </div>
 
-<div class="paraxify container-fluid divider divider-band"></div>
+<div class="paraxify container-fluid divider divider-band" id="band"></div>
 
-<div class="container band" id="band">
+<div class="container band">
     <div class="row cite text-center">
         <div class="col-xs-12">
             “Eine Welt, die immer schläft,<br/>
@@ -196,9 +196,9 @@
     </div>
 </div>
 
-<div class="paraxify container-fluid divider divider-music"></div>
+<div class="paraxify container-fluid divider divider-music" id="music"></div>
 
-<div class="container music" id="music">
+<div class="container music">
     <div class="row">
         <div class="col-md-6 text-center">
             <iframe src="https://open.spotify.com/embed/album/797KE4IrCeXvH6ignBKsDw" height="715" frameborder="0" allowtransparency="true" style="width: 100%"></iframe>
