Fix news bar on scroll

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     <div class="logo">
         <img src="images/LogoEffekte.png" alt="Shackbird Logo">
     </div>
-    <nav>
+    <nav id="news">
         <ul>
             <li><a href="#news" onclick="smoothScroll('news')">NWS</a></li>
             <li><a href="#gigs" onclick="smoothScroll('gigs')">GGS</a></li>
@@ -35,7 +35,7 @@
     </nav>
 </header>
 
-<div class="container news" id="news">
+<div class="container news">
     <div class="row">
 
         <div class="col-xs-12 col-md-4">
