--- a/app/index.html
+++ b/app/index.html
@@ -218,6 +218,14 @@
 
 <div class="paraxify container-fluid divider divider-end"></div>
 
+<div class="container footer">
+    <div class="row text-center">
+        <div class="col-xs-12">
+            &copy; 2017 Shackbird | <a href="impressum.html">Impressum</a>
+        </div>
+    </div>
+</div>
+
 
 <script src="scripts/app.js"></script>
 
