Add basic impressum content

--- a/app/impressum.html
+++ b/app/impressum.html
@@ -37,9 +37,17 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-xs-12">
-            <h3>Impressum</h3>
-            <p>TODO</p>
+        <div class="col-xs-12 col-sm-8 col-sm-push-2">
+            <h1>Impressum</h1>
+            <h2>Web- und Grafikgestaltung</h2>
+            <p>
+                Mischa Helfenstein | <a href="https://themihel.me">themihel.me</a><br/>
+                Pascal Richter
+            </p>
+            <h2>Rechtliche Hinweise</h2>
+            <p>
+                Alle künstlerischen Inhalte auf dieser Seite, insbesondere Musik, Grafiken und Texte (vor allem Songtexte) sind Eigentum von Shackbird. Für die Inhalte extern verlinkter Seiten sind gänzlich deren Betreiber verantwortlich.
+            </p>
         </div>
     </div>
 </div>
