--- a/app/index.html
+++ b/app/index.html
@@ -140,41 +140,35 @@
     <div class="row">
         <div class="col-xs-12">
             <p>
-                Aus genau so einer Welt kommen die 3 jungen Männer/innen, die sich an einem regnerisch-grauen Spätsommertag anno
-
-                MMX gefunden haben, um zusammen als Shackbird Musik zu machen. Die nicht de facto aber selbsternannte letzte Band aus dem
-
-                verschlafenen Provinznest Kusel tut seither ihr Bestes, um der historischen Belastung des umgebenden Musikantenlandes gerecht zu werden
-
-                und diesen Status zukunftsorientiert auszubauen. So gelang es der Kapelle, ihre Musik auch bis über die
-
-                Grenzen des Pfälzer Hinterlandes hinauszutragen und beglückte die Menschen mit ihrem
-
-                Melodramatischen Garagenrock aus eigener Feder auch in den benachbarten Bundesländern.
+                Aus genau so einer Welt kommen die 3 jungen Männer/innen, die sich an einem regnerisch-grauen
+                Spätsommertag anno MMX gefunden haben, um zusammen als Shackbird Musik zu machen. Die nicht de facto
+                aber selbsternannte letzte Band aus dem verschlafenen Provinznest Kusel tut seither ihr Bestes, um der
+                historischen Belastung des umgebenden Musikantenlandes gerecht zu werden und diesen Status
+                zukunftsorientiert auszubauen. So gelang es der Kapelle, ihre Musik auch bis über die Grenzen des
+                Pfälzer Hinterlandes hinauszutragen und beglückte die Menschen mit ihrem Melodramatischen Garagenrock
+                aus eigener Feder auch in den benachbarten Bundesländern.
             </p>
 
             <p>
-                Die Kompositionen bestechen hierbei durch eine präzise Melodik und können durchaus als schnelle Gitarrenmusik bezeichnet werden. Nebst
-
-                dieser treten Bass und Trommeln jedoch nicht in den Hintergrund, sondern nehmen ihren Platz gewissenhaft ein, um als kraftvolle
-
-                instrumentale Grundlage für die Stimmen der Musiker zu dienen.
+                Die Kompositionen bestechen hierbei durch eine präzise Melodik und können durchaus als schnelle
+                Gitarrenmusik bezeichnet werden. Nebst dieser treten Bass und Trommeln jedoch nicht in den Hintergrund,
+                sondern nehmen ihren Platz gewissenhaft ein, um als kraftvolle instrumentale Grundlage für die Stimmen
+                der Musiker zu dienen.
             </p>
 
             <p>
-                So vielfältig wie schon die akustischen Landschaften des Trios gestalten sich die lyrischen der Texte. Sie behandeln eine immense
-
-                Bandbreite verschiedenster Themen und adressieren neben den klassichen Personalpronomen auch ganze Institutionen oder gar die
-
-                gesamte Gesellschaft, mit dem Ziel das Leben der gesamten Menschheit zu verbessern und das Schicksal der Zivilisation zu lenken.
+                So vielfältig wie schon die akustischen Landschaften des Trios gestalten sich die lyrischen der Texte.
+                Sie behandeln eine immense Bandbreite verschiedenster Themen und adressieren neben den klassichen
+                Personalpronomen auch ganze Institutionen oder gar die gesamte Gesellschaft, mit dem Ziel das Leben der
+                gesamten Menschheit zu verbessern und das Schicksal der Zivilisation zu lenken.
             </p>
 
             <p>
-                Bis die Jungs aus der Hutmacherstadt dieses Ziel jedoch erreichen, ist es noch ein weiter Weg, den es zu bestreiten gilt. Am Ende werden mit
-
-                Sicherheit viele Konzerte gespielt, Menschenherzen berührt und Hoffnung gespendet worden sein. Darüber hinaus sind sie übrigens auch noch
-
-                sehr sympathisch und gutaussehend, leben gesund und lieben ihre Familien!
+                Bis die Jungs aus der Hutmacherstadt dieses Ziel jedoch erreichen, ist es noch ein weiter Weg, den es zu
+                bestreiten gilt. Am Ende werden mit Sicherheit viele Konzerte gespielt, Menschenherzen berührt und
+                Hoffnung gespendet worden sein. Darüber hinaus sind sie übrigens auch noch sehr sympathisch und
+                gutaussehend, leben gesund und lieben ihre
+                Familien!
             </p>
         </div>
 
