--- a/app/index.html
+++ b/app/index.html
@@ -42,50 +42,42 @@
             <div class="news-article">
                 <div class="row">
                     <div class="col-xs-12 float-right">
-                        22.12.2017
+                        14.07.2017
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-xs-12">
-                        <h1>Hallo neue Website</h1>
+                        <h1>DIE LETZE BAND AUS KUSEL KEHRT ZU EUCH ZURÜCK!</h1>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-xs-12">
-                        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem facilis ipsum perspiciatis
-                            quas
-                            repellat voluptas voluptatibus! Alias delectus dolores, exercitationem illum laudantium
-                            molestiae nostrum
-                            optio perferendis porro praesentium tempora veritatis.
-                        </div>
-                        <div>Ab adipisci, animi cum dolores dolorum earum exercitationem fuga harum ipsam ipsum iure
-                            magnam magni
-                            maiores molestiae natus nemo qui reprehenderit sequi sint soluta tempore tenetur velit vero
-                            vitae
-                            voluptates.
-                        </div>
-                        <div>Dolorum ea eaque itaque optio? Aut, commodi maiores maxime officia veniam veritatis!
-                            Assumenda atque
-                            consequuntur culpa, delectus, dolorem dolorum eius est eveniet facere inventore, ipsa quas
-                            rem repellendus
-                            veniam vero?
-                        </div>
-                        <div>Aliquam cum ea maiores provident quidem? Fugiat magnam nemo provident quisquam
-                            reprehenderit. Dolorum
-                            nihil nobis, nostrum quae tempore ut. A, adipisci aut dolorem molestias non officia quaerat
-                            repudiandae
-                            ullam voluptas!
-                        </div>
-                        <div>Aliquid at cumque distinctio dolore dolorem error eum fugit incidunt minus nam non odio
-                            pariatur
-                            quibusdam saepe, unde. Accusantium at, aut hic ipsam minus nam nostrum quis repellat ut
-                            voluptatibus?
-                        </div>
-                        <div>
+                        <p>
+                            18.08.2017 | LIVEBÜHNE | Godelhausen<br/>
+                            Mit: <a href="https://www.facebook.com/CaptainRisiko/">Captain Risiko</a> &
+                            <a href="https://www.facebook.com/whiskydiet/">Whisky Diet</a><br/>
+                        </p>
+                        <p>
+                            01.09.2017 | SCHALANDER | Kusel (Messefreitag)<br/>
+                            Mit: Special Guest
+                        </p>
+                        <p>
+                            <hr />
+                        </p>
+                        <p>
+                            Außerdem,<br/>
+                            unser letztes Album <strong>"Wenn Du Willst"</strong><br/>
+                            jetzt digital und als Stream überall erhältlich!
+                        </p>
+                        <p>
+                            <a href="https://open.spotify.com/album/4ZTMuVE79LJE6ry4dC5Jz4">Spotify</a> |
+                            <a href="http://www.deezer.com/album/44141681">Deezer</a>
+                        </p>
+                        <p>
                             <iframe src="https://player.vimeo.com/video/225456786?color=ffffff&title=0&byline=0&portrait=0" frameborder="0" style="width: 100%" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                        </div>
+                        </p>
                     </div>
                 </div>
             </div>
