--- a/app/index.html
+++ b/app/index.html
@@ -98,7 +98,7 @@
             </div>
             <div class="line-big visible-xs visible-sm">DLBAKKZEZ</div>
             <div class="line-big hidden-xs hidden-sm">Die letzte Band aus Kusel kehrt zu euch zurück!</div>
-            <div class="line-normal">Livebühne | Goddelhausen | Eintritt: 5&euro;</div>
+            <div class="line-normal">Livebühne | Godelhausen | Eintritt: 5&euro;</div>
         </div>
     </div>
 
