Add text truncate

--- a/app/index.html
+++ b/app/index.html
@@ -97,7 +97,7 @@
                 <div class="float-right-sm">mit Captain Risiko, Whisky Diet</div>
             </div>
             <div class="line-big visible-xs visible-sm">DLBAKKZEZ</div>
-            <div class="line-big hidden-xs hidden-sm">Die letzte Band aus Kusel kehrt zu euch zurück!</div>
+            <div class="line-big hidden-xs hidden-sm text-truncate">Die letzte Band aus Kusel kehrt zu euch zurück!</div>
             <div class="line-normal">Livebühne | Godelhausen | Eintritt: 5&euro;</div>
         </div>
     </div>
@@ -110,7 +110,7 @@
                 <div class="float-right-sm">mit Special Guest</div>
             </div>
             <div class="line-big visible-xs visible-sm">DLBAKKINZEZ</div>
-            <div class="line-big hidden-xs hidden-sm">Die letzte Band aus Kusel kehrt immer noch zu euch zurück!</div>
+            <div class="line-big hidden-xs hidden-sm text-truncate">Die letzte Band aus Kusel kehrt immer noch zu euch zurück!</div>
             <div class="line-normal">Schalander | Kusel</div>
         </div>
     </div>
