--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,35 @@
 <div class="container news">
     <div class="row">
 
+        <div class="col-xs-12 col-md-8">
+            <div class="news-article">
+                <div class="row">
+                    <div class="col-xs-12 float-right">
+                        15.07.2017
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h1>Shackbird - feiert das Leben</h1>
+                    </div>
+                </div>
+
+                <div class="row news-gallery">
+                    <div class="col-xs-6">
+                        <a href="images/news/20170715/flyer_front.jpg">
+                            <img src="images/news/20170715/flyer_front.jpg" class="img-responsive" alt="Flyer - Front site">
+                        </a>
+                    </div>
+                    <div class="col-xs-6">
+                        <a href="images/news/20170715/flyer_back.jpg">
+                            <img src="images/news/20170715/flyer_back.jpg" class="img-responsive" alt="Flyer - Back site">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="col-xs-12 col-md-4">
             <div class="news-article">
                 <div class="row">
