--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,48 @@
 <div class="container news">
     <div class="row">
 
-        <div class="col-xs-12 col-md-8">
+        <div class="col-xs-12 col-md-4">
+            <div class="news-article">
+                <div class="row">
+                    <div class="col-xs-12 float-right">
+                        16.07.2017
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h1>Max verlässt die Band</h1>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-12">
+                        <p>
+                            Aus aktuellem Anlass müssen wir leider mitteilen, dass wir es uns nicht mehr leisten können, als Quartett zu agieren. Nachdem wir nun 3 Jahre unsere Gagen für ein Leben in überschwänglichem Luxus verprasst haben, stellte unser Finanzberater vor Kurzem fest, dass wir monetär nicht in der Lage sind, die Gehaltskosten von 4 Mitarbeitern gleichzeitig zu tragen.
+                        </p>
+                        <p>
+                            Aus diesem Grund (und keinem anderen; anderweitige Gerüchte werden mit Abmahnungen geahndet) sehen wir uns leider dazu gezwungen, uns nach mehrmonatigen anwaltlichen Verhandlungen von unserem Bassisten Max zu trennen.
+                        </p>
+                        <p>
+                            Wir drei übrigen Mitarbeiter Marcel, Daniel und Pascal werden die Geschäftlichkeiten ab sofort auf Minijobbasis als Trio weiterführen.
+                        </p>
+                        <p>
+                            Max, wir danken dir für die tolle gemeinsame Zeit und wünschen dir viel Glück auf deinem weiteren Lebensweg!  ♥️ ♥️ ♥️
+                        </p>
+                    </div>
+                </div>
+
+                <div class="row news-gallery">
+                    <div class="col-xs-12">
+                        <a href="images/news/20170716/max.jpg">
+                            <img src="images/news/20170716/max.jpg" class="img-responsive" alt="Bild - Max">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-md-4">
             <div class="news-article">
                 <div class="row">
                     <div class="col-xs-12 float-right">
