Prettify code / refactor / use more bootstrap / use vars

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-<header>
+<header class="spacer-bottom-default">
     <div class="contact">
         <a href="mailto:kontakt@shackbird.de" target="_blank" class="contact-link">KNTKT</a>
         <a href="https://www.facebook.com/Shackbird/" target="_blank" class="contact-link">FB</a>
@@ -146,7 +146,9 @@
                             <a href="http://www.deezer.com/album/44141681">Deezer</a>
                         </p>
                         <p>
-                            <iframe src="https://player.vimeo.com/video/225456786?color=ffffff&title=0&byline=0&portrait=0" frameborder="0" style="width: 100%" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe src="https://player.vimeo.com/video/225456786?color=ffffff&title=0&byline=0&portrait=0" frameborder="0" style="width: 100%" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                            </div>
                         </p>
                     </div>
                 </div>
@@ -155,9 +157,9 @@
     </div>
 </div>
 
-<div class="paraxify container-fluid divider divider-gigs" id="gigs"></div>
+<div class="paraxify container-fluid divider divider-gigs spacer-bottom-default" id="gigs"></div>
 
-<div class="container gigs">
+<div class="container gigs spacer-bottom-default">
 
     <div class="row gigs-entry" data-date="8/18/2017">
         <div class="col-xs-3 col-sm-2 col-md-1 line-highlight"></div>
@@ -187,9 +189,9 @@
 
 </div>
 
-<div class="paraxify container-fluid divider divider-band" id="band"></div>
+<div class="paraxify container-fluid divider divider-band spacer-bottom-default" id="band"></div>
 
-<div class="container band">
+<div class="container band spacer-bottom-default">
     <div class="row cite text-center">
         <div class="col-xs-12">
             “Eine Welt, die immer schläft,<br/>
@@ -233,33 +235,32 @@
                 Familien!
             </p>
         </div>
-
     </div>
 </div>
 
-<div class="paraxify container-fluid divider divider-music" id="music"></div>
+<div class="paraxify container-fluid divider divider-music spacer-bottom-default" id="music"></div>
 
 <div class="container music">
-    <div class="row text-center">
+    <div class="row spacer-bottom-4">
         <div class="col-xs-12">
-            <div class="yt-container">
+            <div class="embed-responsive embed-responsive-16by9">
                 <iframe src="https://www.youtube.com/embed/BsQcc6_0Nd0?rel=0" frameborder="0" class="yt-video" allowfullscreen></iframe>
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 text-center">
+        <div class="col-md-6 text-center spacer-bottom-default">
             <iframe src="https://open.spotify.com/embed/album/4ZTMuVE79LJE6ry4dC5Jz4" height="715" frameborder="0" allowtransparency="true" style="width: 100%"></iframe>
         </div>
-        <div class="col-md-6 text-center">
+        <div class="col-md-6 text-center spacer-bottom-default">
             <iframe src="https://open.spotify.com/embed/album/797KE4IrCeXvH6ignBKsDw" height="715" frameborder="0" allowtransparency="true" style="width: 100%"></iframe>
         </div>
     </div>
 </div>
 
-<div class="paraxify container-fluid divider divider-end"></div>
+<div class="paraxify container-fluid divider divider-end spacer-bottom-default"></div>
 
-<div class="container footer">
+<div class="container footer spacer-bottom-default">
     <div class="row text-center">
         <div class="col-xs-12">
             &copy; 2017 Shackbird | <a href="impressum.html">Impressum</a>
