Refactor links and impressum

--- a/app/impressum.html
+++ b/app/impressum.html
@@ -52,7 +52,7 @@
     </div>
 </div>
 
-<div class="container footer">
+<div class="container footer spacer-bottom-default">
     <div class="row text-center">
         <div class="col-xs-12">
             &copy; 2017 Shackbird | <a href="impressum.html">Impressum</a>
